--- a/DebuggingTest/app/src/main/res/values/colors.xml
+++ b/DebuggingTest/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="add_clicks">#FF018786</color>
+    <color name="remove_clicks">#8b0000</color>
 </resources>
