activity_main.xml: Modified components position

--- a/DebuggingTest/app/src/main/res/layout/activity_main.xml
+++ b/DebuggingTest/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/top_label"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.226" />
 
     <Button
         android:id="@+id/btnClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="228dp"
+        android:backgroundTint="@color/add_clicks"
         android:text="@string/click_name"
-        app:layout_constraintTop_toBottomOf="@+id/lblDebug"
-        tools:layout_editor_absoluteX="37dp"
-        android:backgroundTint="@color/add_clicks"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblDebug" />
 
     <Button
         android:id="@+id/btnUnclicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="228dp"
         android:backgroundTint="@color/remove_clicks"
         android:text="@string/unclick_name"
-        app:layout_constraintTop_toBottomOf="@+id/lblDebug"
-        tools:layout_editor_absoluteX="255dp" />
+        app:layout_constraintStart_toEndOf="@+id/btnClicked"
+        app:layout_constraintTop_toBottomOf="@+id/lblDebug" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
