--- a/DebuggingTest/app/src/main/res/layout/activity_main.xml
+++ b/DebuggingTest/app/src/main/res/layout/activity_main.xml
@@ -20,25 +20,51 @@
         app:layout_constraintVertical_bias="0.226" />
 
     <Button
+        android:id="@+id/btnUnclicked"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/remove_clicks"
+        android:text="@string/unclick_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.737"
+        app:layout_constraintStart_toEndOf="@+id/btnClicked"
+        app:layout_constraintTop_toBottomOf="@+id/lblDebug" />
+
+    <Button
         android:id="@+id/btnClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="48dp"
         android:backgroundTint="@color/add_clicks"
         android:text="@string/click_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDebug" />
 
     <Button
-        android:id="@+id/btnUnclicked"
+        android:id="@+id/btnSendText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="228dp"
-        android:backgroundTint="@color/remove_clicks"
-        android:text="@string/unclick_name"
-        app:layout_constraintStart_toEndOf="@+id/btnClicked"
-        app:layout_constraintTop_toBottomOf="@+id/lblDebug" />
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="55dp"
+        android:text="@string/send_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toEndOf="@+id/inputYourName"
+        app:layout_constraintTop_toBottomOf="@+id/btnClicked" />
+
+    <EditText
+        android:id="@+id/inputYourName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="55dp"
+        android:ems="10"
+        android:hint="Type your name ..."
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnClicked" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
