--- a/IMCCalculator/app/src/main/res/layout/activity_main.xml
+++ b/IMCCalculator/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/title_purple" />
+        <TextView
+            android:id="@+id/textView"
+            style="@style/title_purple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="IMC"
+            android:layout_marginTop="50dp"
+            android:textSize="53sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="21sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.081" />
+        <EditText
+            android:id="@+id/input_height"
+            style="@style/input_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/textView"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="-211dp"
+            android:hint="Height in cm (e.g: 1.78)" />
 
-    <RadioButton
-        android:id="@+id/radioButton"
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_marginTop="20dp"
-        android:text="Hello Radio Button"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="130dp" />
+        <EditText
+            android:id="@+id/input_weight"
+            style="@style/input_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="70dp"
+            android:hint="Weight in Kg (e.g: 65.4)" />
 
-    <CheckBox
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_marginTop="4dp"
-        android:text="Hello Check Box"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton"
-        tools:layout_editor_absoluteX="130dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_below="@id/input_weight"
+            android:padding="15dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/calculate_btn"
+            android:textSize="24dp" />
+
+</RelativeLayout>
