--- a/IMCCalculator/app/src/main/res/values/styles.xml
+++ b/IMCCalculator/app/src/main/res/values/styles.xml
@@ -6,4 +6,12 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">42sp</item>
     </style>
+
+    <style name="input_info">
+        <item name="android:inputType">numberDecimal</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textSize">21sp</item>
+    </style>
 </resources>
