added layout to allow user to enter the inputs

--- a/IMCCalculator/app/src/main/res/layout/activity_main.xml
+++ b/IMCCalculator/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
+
 
         <TextView
             android:id="@+id/textView"
             style="@style/title_purple"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:text="IMC"
-            android:layout_marginTop="50dp"
-            android:textSize="53sp" />
+            android:textAlignment="center"
+            android:textSize="53sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline_center" />
 
         <EditText
             android:id="@+id/input_height"
             style="@style/input_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/textView"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="-211dp"
-            android:hint="Height in cm (e.g: 1.78)" />
+            android:layout_width="371dp"
+            android:layout_height="64dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="24dp"
+            android:hint="Height in cm (e.g: 1.78)"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_weight" />
 
         <EditText
             android:id="@+id/input_weight"
             style="@style/input_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_width="375dp"
+            android:layout_height="68dp"
+            android:layout_centerVertical="true"
             android:layout_marginHorizontal="70dp"
-            android:hint="Weight in Kg (e.g: 65.4)" />
-
+            android:layout_marginTop="72dp"
+            android:hint="Weight in Kg (e.g: 65.4)"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:id="@+id/button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/input_weight"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:padding="15dp"
+            android:text="@string/calculate_btn"
+            android:textSize="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
+            app:layout_constraintHorizontal_bias="0.499"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_center"
+            app:layout_constraintGuide_percent="0.5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_below="@id/input_weight"
-            android:padding="15dp"
-            android:layout_marginTop="50dp"
-            android:text="@string/calculate_btn"
-            android:textSize="24dp" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="205dp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.442" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
