--- a/IMCCalculator/app/src/main/res/layout/activity_main.xml
+++ b/IMCCalculator/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
             android:textAlignment="center"
             android:textColor="@color/purple_500"
             android:textSize="53sp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -31,12 +31,14 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="24dp"
-            android:textColor="@color/purple_500"
+            android:autofillHints="height"
+            android:background="@color/white"
             android:hint="@string/placeholder_height"
+            android:textColor="@color/purple_500"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_weight"
-            android:background="@color/white" />
+            tools:ignore="TextContrastCheck" />
 
         <EditText
             android:id="@+id/input_weight"
@@ -46,12 +48,14 @@
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="70dp"
             android:layout_marginTop="124dp"
+            android:autofillHints="weight"
+            android:background="@color/white"
             android:hint="@string/placeholder_weight"
             android:textColor="@color/purple_500"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/white" />
+            tools:ignore="TextContrastCheck" />
 
         <Button
             android:id="@+id/button"
@@ -77,35 +81,5 @@
             android:orientation="vertical"
             app:layout_constraintGuide_begin="205dp"
             app:layout_constraintGuide_percent="0.5" />
-
-        <TextView
-            android:id="@+id/result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.499" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="71dp"
-            android:layout_height="69dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_myplaces" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="71dp"
-            android:layout_height="69dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_myplaces" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
