single_contact.xml: Included some spacing in the layout

--- a/RecyclerViewApp/app/src/main/res/layout/single_contact.xml
+++ b/RecyclerViewApp/app/src/main/res/layout/single_contact.xml
@@ -6,7 +6,6 @@
     android:layout_margin="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,8 +23,8 @@
             android:id="@+id/text_view_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Line 1
-"
+            android:text="Line 1"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -37,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:layout_marginLeft="8dp"
             android:text="Line 2"
             app:layout_constraintStart_toEndOf="@+id/image_view"
             app:layout_constraintTop_toBottomOf="@+id/text_view_1" />
