--- a/RecyclerViewApp/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewApp/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="410dp"
-        android:layout_height="475dp"
+        android:layout_width="413dp"
+        android:layout_height="274dp"
         android:clipToPadding="false"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintVertical_bias="0.929"
         tools:listitem="@layout/single_contact" />
 
     <EditText
@@ -90,12 +92,14 @@
         android:id="@+id/btn_delete"
         android:layout_width="122dp"
         android:layout_height="60dp"
-        android:backgroundTint="@android:color/holo_green_dark"
-        android:text="INSERT"
+        android:layout_marginTop="4dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="DELETE"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/btn_insert"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/input_personLastName"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_insert" />
 
     <View
         android:id="@+id/divider"
@@ -106,5 +110,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_personPhone" />
+
+    <TextView
+        android:id="@+id/testResult"
+        android:layout_width="395dp"
+        android:layout_height="90dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
